feat: navbar created

--- a/src/components/MainContent/main.module.scss
+++ b/src/components/MainContent/main.module.scss
@@ -1,29 +1,43 @@
-.container{
+.container {
   display: flex;
   min-height: 100vh;
-  .content{
+  .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    .title{
+    .title {
       font-size: 4rem;
       font-weight: 700;
       color: var(--main-color);
     }
-    .pText{
+    .pText {
       font-weight: 200;
     }
-    .viewCV{
+    .viewCV {
       font-family: "Poppins", sans-serif;
       cursor: pointer;
       text-decoration: none;
       text-align: center;
       margin-top: 1rem;
-      padding: .5rem 1rem;
+      padding: 0.5rem 1rem;
       background-color: var(--main-color);
-      border-radius: .2rem;
+      color: var(--white);
+      border-radius: 0.2rem;
       font-size: 1rem;
       width: 7rem;
+    }
+  }
+}
+
+// media queries
+@media (max-width: 590px) {
+  .container {
+    .content {
+      align-items: center;
+      text-align: center;
+      .title {
+        font-size: 3.5rem;
+      }
     }
   }
 }
