--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,30 @@
 :root {
   font-family: "Poppins", sans-serif;
 
-  --main-color: #703299;
+  --main-color: #532572;
   --background: #0d1117;
   --white: #ffffff;
 }
 
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
+}
+
+body {
   background-color: var(--background);
   color: var(--white);
 }
 
-main{
+main {
+  position: relative;
   min-height: 100vh;
-  max-width: 1400px;
   padding: 0 10rem;
+  max-width: 1400px;
   margin: auto;
+  @media (max-width: 920px) {
+    padding: 0 5rem;
+  }
 }
