--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,13 @@
   --main-color: #532572;
   --background: #0d1117;
   --white: #ffffff;
+
+  --light-red: hsl(15, 100%, 70%);
+  --soft-blue: hsl(195, 74%, 62%);
+  --light-pink: hsl(348, 100%, 68%);
+  --lima-green: hsl(145, 58%, 55%);
+  --violet: hsl(264, 64%, 52%);
+  --soft-orange: hsl(43, 84%, 65%);
 }
 
 * {
