--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
   --main-color: #532572;
   --background: #0d1117;
   --white: #ffffff;
-
+  --black: #111111;
   --light-red: hsl(15, 100%, 70%);
   --soft-blue: hsl(195, 74%, 62%);
   --light-pink: hsl(348, 100%, 68%);
