feat: nav scroll added

--- a/src/components/Navbar/nav.module.scss
+++ b/src/components/Navbar/nav.module.scss
@@ -1,4 +1,5 @@
 .nav {
+  z-index: 200;
   position: fixed;
   left: 0;
   right: 0;
@@ -17,14 +18,17 @@
       place-content: center;
       width: 4.5rem;
       height: 4.5rem;
-      img {
-        font-size: 2rem;
-        width: 100%;
-        height: 100%;
-      }
-      &:active img,
-      :hover {
-        filter: invert(12%) sepia(13%) saturate(3013%) hue-rotate(233deg) brightness(94%) contrast(104%);
+      a {
+        img {
+          font-size: 2rem;
+          width: 100%;
+          height: 100%;
+        }
+        &:active img,
+        :hover {
+          filter: invert(12%) sepia(13%) saturate(3013%) hue-rotate(233deg)
+            brightness(94%) contrast(104%);
+        }
       }
     }
   }
