fix: responsive issues

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   height: 35vh;
+  margin-bottom: 5rem;
   .title{
     font-size: 2rem;
     margin-bottom: 3rem;
