--- a/src/components/Form/form.module.scss
+++ b/src/components/Form/form.module.scss
@@ -1,7 +1,7 @@
 @import "../../index.scss";
 
 .portal {
-  z-index: 10;
+  z-index: 500;
   position: fixed;
   top: 0;
   right: 0;
@@ -39,6 +39,7 @@
     background-color: var(--background);
     width: 600px;
     padding: 2rem;
+    margin: 0 0.5rem;
     .form {
       display: flex;
       flex-direction: column;
@@ -66,6 +67,9 @@
         border: none;
         @include button;
       }
+    }
+    @media (max-width: 600px) {
+      padding: 1rem;
     }
   }
 }
